fixed margin on iphone

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -549,6 +549,7 @@ input:focus, textarea:focus {
     }
     #mainName {
         font-size: 3rem;
+        margin: auto; 
     }
     .projImg {
         width: 12rem;
